# otc-quote-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml
docs/: development_plan.md  official_image_cases_inventory.md  optimization_implementation_plan.md  reference_mapping.md
reference_materials/: golden_cases.yaml  inquiry_cases.yaml  standard_derivative_terms.yaml
sample_data/: european_option_email_en.txt  fcn_quote_zh.txt  reference_case_01_image_transcription.txt  reference_case_02_image_transcription.txt  reference_case_03_image_transcription.txt  reference_case_04_image_transcription.txt  reference_case_05_image_transcription.txt  reference_case_06_phoenix_dcn_unsupported.txt  reference_case_09_limited_loss_snowball.txt  reference_case_11_dcn_unsupported.txt  reference_case_12_sharkfin_unsupported.txt  reference_case_13_snowball_two_choices.txt  snowball_inquiry_zh.txt
scripts/: evaluate_samples.py  run_all_samples.ps1
src/otc_quote_agent/: __init__.py  config.py  evaluation.py  provenance.py  service.py
src/otc_quote_agent/agents/: __init__.py  classifier.py  extractor.py  reviewer.py
src/otc_quote_agent/exporters/: __init__.py  bundle.py  csv_exporter.py  html_exporter.py  json_exporter.py  presentation.py
tests/: fakes.py  test_classifier.py  test_evaluation.py  test_exporters.py  test_llm_clients.py  test_normalizers.py  test_parsers.py  test_prompts.py  test_provenance.py  test_reference_materials.py  test_review.py  test_schemas.py  test_service_smoke.py  test_validators.py
(+15 files in other folders)
