[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "otc-quote-agent"
version = "0.1.0"
description = "OTC derivatives quote structuring agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "openpyxl>=3.1,<4",
    "pydantic>=2.8,<3",
    "pypdf>=5,<7",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "streamlit>=1.37,<2",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6,<7",
    "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
